# rust-test-framework

./: README.md
file_search/: Cargo.toml
file_search/src/: lib.rs
macro-demo/: Cargo.toml
macro-demo/src/: lib.rs
test-framework/: Cargo.toml
test-framework/src/: lib.rs  main.rs
test-framework/tests/: integration_tests.rs  integration_tests_the_second.rs
